--- a/config/cgp_config.yaml
+++ b/config/cgp_config.yaml
@@ -1,13 +1,13 @@
 hyperparameters :
   # ea parameters
-  mu : 90
+  mu : 60
   lambda : 80
   m_const : 0.01
-  m_node : 0.2
-  m_output : 0.2
+  m_node : 0.3
+  m_output : 0.3
   n_gen :  1000 # 50000
 
 
   # cgp parameters
-  col :   60
+  col :  120 # old 60
   row : 1
